# LainOS

./: .gitignore  Cargo.toml  Makefile  README.md  Xargo.toml  build.rs
bootloader/: Cargo.toml  Makefile
bootloader/src/: kmain.rs  lang_items.rs
ext/: layout.ld  start.S
fat32/: Cargo.toml
fat32/src/: lib.rs  mbr.rs  tests.rs
fat32/src/traits/: metadata.rs
fat32/src/vfat/: cache.rs  cluster.rs  dir.rs  ebpb.rs  entry.rs  fat.rs  file.rs  metadata.rs  mod.rs  shared.rs  vfat.rs
kernel/: Cargo.toml  Makefile  Xargo.toml  build.rs  raspi3.json
kernel/ext/: layout.ld  macro.S  start.S
kernel/src/: aarch64.rs  console.rs  elf.rs  elf64.rs  externs.rs  fb.rs  gles.rs  kmain.rs  mmu.rs  mutex.rs  panic.rs  psf.rs  sd.rs  shell.rs  user.rs  util.rs
kernel/src/allocator/: bin.rs  bump.rs  linked_list.rs  mod.rs  tests.rs  util.rs
kernel/src/fs/: mod.rs  sd.rs
kernel/src/process/: process.rs  scheduler.rs  stack.rs  state.rs
kernel/src/shell/: mod.rs
kernel/src/traps/: irq.rs  mod.rs  syndrome.rs  syscall.rs  trap_frame.rs
kernel/src/user/: mod.rs  shell.rs  syscall.rs
kernel/src/vm/: address.rs  entry.rs  huge.rs  mod.rs  page.rs  page_allocator.rs  table.rs
pi/: Cargo.toml
pi/src/: common.rs  gpio.rs  interrupt.rs  lib.rs  mbox.rs  timer.rs  uart.rs
pi/src/atags/: atag.rs  mod.rs  raw.rs
src/: console.rs  delays.rs  exception.rs  externs.rs  fb.rs  gles.rs  gpio.rs  kmain.rs  lfb.rs  mbox.rs  mmu.rs  panic.rs  power.rs  print.rs  sd.rs  sdn.rs  shell.rs  uart.rs  uart0.rs  util.rs
src/allocator/: bump.rs  mod.rs  tests.rs
src/fs/: mod.rs  sd.rs
src/pi/: gpio.rs  irq.rs  mbox.rs  mod.rs  power.rs  timer.rs  uart.rs  uart0.rs
stack-vec/src/: lib.rs
std/: Cargo.toml  Xargo.toml
std/src/: lib.rs
std/src/collections/hash/: map.rs
std/src/sync/: mod.rs
std/src/sys/ros/: mod.rs
sys/: Cargo.toml
sys/src/: lib.rs  mutex.rs  util.rs
sys/src/fs/: block_device.rs  char_device.rs  dummy.rs  fs.rs  io.rs  mod.rs
sys/src/stack_vec/: mod.rs  tests.rs
sys/src/volatile/: macros.rs  mod.rs
sys_fs/: Cargo.toml
sys_fs/src/: lib.rs  mbr.rs  tests.rs
sys_fs/src/vfat/: cache.rs  dir.rs  ebpb.rs  entry.rs  error.rs  fat.rs  file.rs  metadata.rs  shared.rs  vfat.rs
ttywrite/: test.sh
ttywrite/src/: main.rs
vc4/: Cargo.toml
vc4/src/: packet.rs
vfat/: Cargo.toml
vfat/src/: io.rs  lib.rs  mbr.rs  os_str.rs  tests.rs  util.rs
vfat/src/traits/: block_device.rs  dummy.rs  fs.rs
vfat/src/vfat/: cache.rs  cluster.rs  dir.rs  ebpb.rs  entry.rs  error.rs  fat.rs  file.rs  metadata.rs  shared.rs  vfat.rs
volatile/: Cargo.toml
volatile/src/: lib.rs
xmodem/: Cargo.toml
xmodem/src/: lib.rs
