[package]
name = "lainos"
version = "0.1.0"

[workspace]
members = [
	"stack-vec",
	"volatile",
	"std",
]

[dependencies]
spin = "*"
slab_allocator = "0.3.0"
bitflags = "1.0"
#pi = { path = "../pi", features = ["std"] }

stack-vec = { path = "stack-vec" }
volatile = { path = "volatile" }
std = { path = "std" }

[lib]
crate-type = ["staticlib"]
path = "src/kmain.rs"

[profile.dev]
panic = "abort"
lto = true
debug = true
opt-level = 1

[profile.test]
debug = true

[profile.release]
panic = "abort"
lto = true
#opt-level = 1
opt-level = 2
