[package]
name = "lainos"
version = "0.1.0"

[workspace]
members = [
	"stack-vec",
	"volatile",
	"std",
	"vc4",
	"xmodem",
	"sys_fs",
]

[dependencies]
spin = "*"
slab_allocator = "0.3.0"
bitflags = "1"

sys_fs = { path = "sys_fs" }
stack-vec = { path = "stack-vec" }
volatile = { path = "volatile" }

#std = { path = "std" }
#pi = { path = "../pi", features = ["std"] }

log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
#log = { version = "0.4", features = ["max_level_debug", "release_max_level_trace"] }

[lib]
crate-type = ["staticlib"]
path = "src/kmain.rs"

[profile.dev]
panic = "abort"
lto = true
debug = true
opt-level = 1

[profile.test]
debug = true

[profile.release]
panic = "abort"
lto = true
opt-level = 3
