[package]
name = "bootloader"
version = "0.1.0"

[lib]
crate-type = ["staticlib"]
path = "src/kmain.rs"

[profile.dev]
panic = "abort"
lto = true
debug = true

[profile.test]
panic = "abort"
lto = true
debug = true

[profile.release]
panic = "abort"
lto = true

[dependencies]
pi = { path = "../pi", features = ["std"] }
xmodem = { path = "../xmodem/" }
