[package]
name = "kernel"
version = "0.1.0"

[dependencies]
#spin = "*"
#slab_allocator = "0.3.0"
#bitflags = "1"

#sys_fs = { path = "../sys_fs" }
sys = { path = "../sys" }
pi = { path = "../pi", features = [] }
#pi = { path = "../pi" }

#log = { version = "0.4", features = ["max_level_trace", "release_max_level_warn"] }

[lib]
crate-type = ["staticlib"]
path = "src/kmain.rs"
