[package]
name = "kernel"
version = "0.1.0"

[dependencies]
vfat = { path = "../vfat", features = [] }
sys = { path = "../sys" }
pi = { path = "../pi", features = [] }

[dependencies.bitflags]
version = "1"

[dependencies.cloudabi]
version = "0.0.3"

[lib]
crate-type = ["staticlib"]
path = "src/kmain.rs"
